Cleanup: replaced "new Boolean" by the static Boolean objects (Java 1.4).