@@ -245,7 +245,7 @@ public class CProjectSourceLocation implements IProjectSourceLocation
             Element node = document.createElement( ELEMENT_NAME );
             document.appendChild( node );
     		node.setAttribute( ATTR_PROJECT, getProject().getName() );
-    		node.setAttribute( ATTR_GENERIC, new Boolean( isGeneric() ).toString() );
+    		node.setAttribute( ATTR_GENERIC, Boolean.valueOf( isGeneric() ).toString() );
 			return CDebugUtils.serializeDocument( document );
         }
         catch( ParserConfigurationException e ) 
